+ Fixed issue where images on the person profile page were not showing in Firefox (Fixes #500)

--- a/RockWeb/Styles/_blocks-persondetails.less
+++ b/RockWeb/Styles/_blocks-persondetails.less
@@ -475,11 +475,15 @@
             }
 
             .person-image {
-                -webkit-filter: grayscale(100%);
-                -moz-filter: grayscale(100%);
-                filter: gray;
                 filter: grayscale(100%);
-                filter: url('../../Assets/Images/(desaturate.svg#grayscale');
+                -webkit-filter: grayscale(100%); /* For Webkit browsers */
+                filter: gray; /* For IE 6 - 9 */
+                -webkit-transition: all .6s ease; /* Fade to color for Chrome and Safari */
+                filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */filter: grayscale(100%);
+                -webkit-filter: grayscale(100%); /* For Webkit browsers */
+                filter: gray; /* For IE 6 - 9 */
+                -webkit-transition: all .6s ease; /* Fade to color for Chrome and Safari */
+                filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
                 transition: .5s;
             }
 
@@ -488,9 +492,9 @@
                 border-radius: @border-radius-base;
 
                 .person-image {
-                    -webkit-filter: grayscale(0%);
-                    -moz-filter: grayscale(0%);
                     filter: grayscale(0%);
+                    -webkit-filter: grayscale(0%);
+                    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'1 0 0 0 0, 0 1 0 0 0, 0 0 1 0 0, 0 0 0 1 0\'/></filter></svg>#grayscale");
                 }
             }
         }
