--- a/RockWeb/Themes/Rock/Styles/theme.css
+++ b/RockWeb/Themes/Rock/Styles/theme.css
@@ -2955,11 +2955,19 @@ table.attribute-grid tr th:nth-child(3) {
   clear: both;
 }
 .personprofilebar-family .groupmembers .member .person-image {
-  -webkit-filter: grayscale(100%);
-  -moz-filter: grayscale(100%);
-  filter: gray;
+  /* For Webkit browsers */
+  /* For IE 6 - 9 */
+  /* Fade to color for Chrome and Safari */
+  /* Firefox 10+, Firefox on Android */
   filter: grayscale(100%);
-  filter: url('../../Assets/Images/(desaturate.svg#grayscale');
+  -webkit-filter: grayscale(100%);
+  /* For Webkit browsers */
+  filter: gray;
+  /* For IE 6 - 9 */
+  -webkit-transition: all .6s ease;
+  /* Fade to color for Chrome and Safari */
+  filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+  /* Firefox 10+, Firefox on Android */
   transition: .5s;
 }
 .personprofilebar-family .groupmembers .member:hover {
@@ -2967,9 +2975,9 @@ table.attribute-grid tr th:nth-child(3) {
   border-radius: 4px;
 }
 .personprofilebar-family .groupmembers .member:hover .person-image {
-  -webkit-filter: grayscale(0%);
-  -moz-filter: grayscale(0%);
   filter: grayscale(0%);
+  -webkit-filter: grayscale(0%);
+  filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'1 0 0 0 0, 0 1 0 0 0, 0 0 1 0 0, 0 0 0 1 0\'/></filter></svg>#grayscale");
 }
 .personprofilebar-family .actions {
   position: absolute;
